--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     
                     <div class="project-card" data-category="go web api">
                         <div class="project-image">
-                            <div class="placeholder-image">🎵</div>
+                            <img src="images/groupie-tracker.png" alt="Groupie Tracker Screenshot" />
                         </div>
                         <div class="project-content">
                             <h3>Groupie Tracker</h3>
@@ -145,7 +145,7 @@
 
                     <div class="project-card" data-category="go web">
                         <div class="project-image">
-                            <div class="placeholder-image">🎨</div>
+                            <img src="images/ascii-art.png" alt="ASCII Art Web Screenshot" />
                         </div>
                         <div class="project-content">
                             <h3>ASCII Art Web</h3>
@@ -165,7 +165,7 @@
 
                     <div class="project-card" data-category="go algorithms">
                         <div class="project-image">
-                            <div class="placeholder-image">🐜</div>
+                            <img src="images/lem-in.png" alt="Lem-in Screenshot" />
                         </div>
                         <div class="project-content">
                             <h3>Lem-in</h3>
