add photo pour demo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="hero-text">
                     <h1>Vous cherchez un développeur web ?</h1>
                     <h2>Parfait !</h2>
-                    <p>Étudiant en formation chez Zone01, à la recherhe d'une alternance.<br>Spécialisé en GO et développement web moderne</p>
+                    <p>Étudiant en formation chez Zone01, à la recherche d'une alternance.<br>Spécialisé en GO et développement web moderne</p>
                     <a href="#about" class="cta-button">En savoir plus</a>
                 </div>
             </div>
