Remove photo digitalization effect, keep simple photo display
- Remove complex digitalization transition effect
- Replace with clean, simple profile photo
- Remove all ASCII art and matrix effects
- Keep only basic hover effect on photo
- Simplify HTML structure in about section

--- a/index.html
+++ b/index.html
@@ -51,13 +51,7 @@
                 <h2>À propos de moi</h2>
                 <div class="about-content">
                     <div class="about-photo-container">
-                        <div id="photo-digitalizer" class="photo-digitalizer">
-                            <img id="profile-photo" src="images/photo-01.JPG" alt="Thibaud Masurel - Développeur Web" />
-                            <canvas id="ascii-canvas" class="ascii-canvas"></canvas>
-                            <div class="digital-overlay">
-                                <div class="matrix-chars"></div>
-                            </div>
-                        </div>
+                        <img src="images/photo-01.JPG" alt="Thibaud Masurel - Développeur Web" class="profile-photo" />
                     </div>
                     <div class="about-info">
                         <div class="about-text">
