carrection pour la version mobile

--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
                 <div class="contact-content">
                     <p>Vous souhaitez collaborer ou en savoir plus ?</p>
                     <div class="contact-links">
-                        <a href="mailto:thibaud.masurel@gmail.com" class="contact-link">Email</a>
-                        <a href="https://www.linkedin.com/in/thibaud-masurel-90b960380/" class="contact-link">LinkedIn</a>
-                        <a href="https://github.com/ThMasurel" class="contact-link">GitHub</a>
+                        <a href="mailto:thibaud.masurel@gmail.com" class="contact-link"><span class="contact-text">Email</span></a>
+                        <a href="https://www.linkedin.com/in/thibaud-masurel-90b960380/" class="contact-link"><span class="contact-text">LinkedIn</span></a>
+                        <a href="https://github.com/ThMasurel" class="contact-link"><span class="contact-text">GitHub</span></a>
                     </div>
                 </div>
             </div>
