--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="nav-menu">
                     <li><a href="#about">À propos</a></li>
                     <li><a href="#formation">Formation</a></li>
-                    <li><a href="#projects">Portfolio</a></li>
+                    <li><a href="#projects">Projets</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="cv_thibaud_masurel.pdf" target="_blank" class="cv-link">CV</a></li>
                 </ul>
@@ -124,7 +124,7 @@
 
         <section id="projects">
             <div class="container">
-                <h2>Portfolio</h2>
+                <h2>Projets</h2>
                 
                 <div class="projects-grid">
                     
